--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,27 +1,63 @@
 {
+  "id": "/",
   "name": "Korus Framework",
-  "short_name": "Korus",
-  "description": "Korus Framework — Java framework powered by build-time dependency injection and zero reflection.",
+  "short_name": "Korus Docs",
+  "description": "Korus Framework — Java framework powered by build-time dependency injection and zero reflection. Documentation and guides for getting started, API reference, and blog.",
+  "lang": "en-US",
+  "dir": "ltr",
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
+  "display_override": [
+    "standalone",
+    "minimal-ui",
+    "browser"
+  ],
+  "orientation": "portrait",
   "background_color": "#0d1117",
   "theme_color": "#0d1117",
+  "categories": [
+    "documentation",
+    "developer-tools"
+  ],
   "icons": [
     {
       "src": "/img/pwa/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
       "src": "/img/pwa/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
       "src": "/img/pwa/icon-512-maskable.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
+    },
+    {
+      "src": "/img/logo.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "/img/logo1.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "label": "Korus Docs — Desktop / Hero"
+    },
+    {
+      "src": "/img/logo1.png",
+      "sizes": "720x1280",
+      "type": "image/png",
+      "label": "Korus Docs — Mobile / Hero"
     }
   ],
   "shortcuts": [
@@ -29,19 +65,42 @@
       "name": "Open Docs",
       "short_name": "Docs",
       "description": "Go to Korus documentation",
-      "url": "/docs/intro"
+      "url": "/docs/intro",
+      "icons": [
+        {
+          "src": "/img/logo1.png",
+          "sizes": "96x96",
+          "type": "image/png"
+        }
+      ]
+    },
+    {
+      "name": "Quick Start",
+      "short_name": "Start",
+      "description": "Read the Korus quick start guide",
+      "url": "/docs/getting-started/introduction",
+      "icons": [
+        {
+          "src": "/img/logo1.png",
+          "sizes": "96x96",
+          "type": "image/png"
+        }
+      ]
     },
     {
       "name": "Open Blog",
       "short_name": "Blog",
       "description": "Read Korus articles",
-      "url": "/blog"
-    },
-    {
-      "name": "GitHub Repo",
-      "short_name": "GitHub",
-      "description": "View source code",
-      "url": "https://github.com/korus-projects"
+      "url": "/blog",
+      "icons": [
+        {
+          "src": "/img/logo1.png",
+          "sizes": "96x96",
+          "type": "image/png"
+        }
+      ]
     }
-  ]
+  ],
+  "related_applications": [],
+  "prefer_related_applications": false
 }
