Update project references from Korus to Preonus in various files

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,6 +1,6 @@
 ﻿vinit:
   name: Vinit Shinde
-  title: Creator of Korus Framework
+  title: Creator of Preonus Framework
   url: https://github.com/Vin-it-9
   image_url: https://github.com/Vin-it-9.png
   socials:
